Attempted to force open answers to wrap correctly

--- a/less/pdfs.less
+++ b/less/pdfs.less
@@ -165,11 +165,17 @@ div.longitudinal-lines { margin-top: 3px; }
 }
 
 /* section-specific styles */
+.list-section .response-list {
+	max-width: 100%;
+}
+
 .list-section .response-list li { 
 	padding: 0.2em;
 	margin-bottom: 0.5em;
 	background: #efefef;
 	font-size: 0.6em;
+	white-space: normal;
+	max-width: 100%;
 }
 
 .survey-metadata-section {
